--- a/game.css
+++ b/game.css
@@ -1,6 +1,6 @@
 body
 {
-	background: red;
+	background: #ce4a4a;
 }
 
 	.login_div1 , .login_div2
@@ -33,8 +33,4 @@ border-top: 10px solid #AA4465;
 padding: 10px;
 float: none;
 text-align: left;
-}
-
-button{
-	width: 30%;
 }
